--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
             <!-- Français -->
             <div class="cours-card cours-fr">
-                <img src="assets/francais.AVIF" alt="Français">
+              <img src="assets/francais.png" alt="Français">
                 <h3>Français</h3>
                 <p>Communication, vocabulaire et grammaire.</p>
                 <a href="francais.html" class="btn-cours">Voir plus</a>
@@ -70,7 +70,7 @@
 
             <!-- Espagnol -->
             <div class="cours-card cours-es">
-                <img src="assets/Espagnol.AVIF" alt="Espagnol">
+               <img src="assets/Espagnol.png" alt="Espagnol">
                 <h3>Espagnol</h3>
                 <p>Apprentissage progressif et interactif.</p>
                 <a href="espagnol.html" class="btn-cours">Voir plus</a>
@@ -78,7 +78,7 @@
 
             <!-- Italien -->
             <div class="cours-card cours-it">
-                <img src="assets/italien.AVIF" alt="Italien">
+                <img src="assets/italien.jpg" alt="Italien">
                 <h3>Italien</h3>
                 <p>Une langue riche et musicale à découvrir.</p>
                 <a href="italien.html" class="btn-cours">Voir plus</a>
