--- a/francais.html
+++ b/francais.html
@@ -117,7 +117,7 @@ header img {
 
 <!-- Header dynamique uniquement avec image -->
 <header>
-   <img src="assets/france.AVIF" alt="Français">
+  <img src="assets/france.png" alt="Français">
 </header>
 
 <!-- Contenu du cours -->
